--- a/app/templates/article/article_set_list.html
+++ b/app/templates/article/article_set_list.html
@@ -46,7 +46,7 @@
                                             <th>上传状态</th>
 {#                                            <th>发送时间</th>#}
                                             <th>创建日期</th>
-{#                                            <th>操作</th>#}
+                                            <th>操作</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -88,11 +88,11 @@
                                                 {% endif %}
 {#                                                <td>{{ row["send_time"] }}</td>#}
                                                 <td>{{ row["create_time"] }}</td>
-{#                                                <td>#}
-{#                                                    <button type="button"#}
-{#                                                            class="btn btn-danger glyphicon glyphicon-pencil" title="编辑"#}
-{#                                                            onclick="modify_monitor_data({{ row['id'] }})"></button>#}
-{#                                                </td>#}
+                                                <td>
+                                                    <button type="button"
+                                                            class="btn btn-danger glyphicon" title="详情"
+                                                            onclick="modify_monitor_data({{ row['id'] }})">查看详情</button>
+                                                </td>
                                             </tr>
                                         {% endfor %}
                                         </tbody>
@@ -233,7 +233,7 @@
         }
 
         function modify_monitor_data(id) {
-            window.location.href = "/modify_article_upload_set?id=" + id;
+            window.location.href = "/upload_details_list?upload_id=" + id;
         }
 
     </script>
