--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,7 @@
     <link href="../static/global/plugins/bootstrap-wysihtml5/bootstrap-wysihtml5.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../static/layer/theme/default/layer.css">
     <link href="../static/file_upload/css/fileinput.css" rel="stylesheet" type="text/css"/>
+     <link href="../static/global/plugins/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
     {#    <link href="../static/global/plugins/bootstrap-summernote/summernote.css" rel="stylesheet" type="text/css"/>#}
     {% block css %}
     {% endblock %}
@@ -44,6 +45,7 @@
     <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
     <script src="../static/layer/layer.js"></script>
     <script src="../static/global/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
+    <script src="../static/global/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="../static/file_upload/js/fileinput.js"></script>
     <script src="../static/file_upload/js/zh.js"></script>
 </head>
