--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -167,7 +167,7 @@
                             </div>
                             <div class="modal-body">
                                 <div><label class="control-label">账户分类</label>
-                                    <select class="form-control input-small" id="category_type">
+                                    <select class="form-control input-small" id="category_types">
                                         {% for x in category_ls %}
                                             <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
                                         {% endfor %}
@@ -222,7 +222,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-2">分类</label>
                                         <div class="col-md-4">
-                                            <select class="form-control input-small" id="category_type">
+                                            <select class="form-control input-small" id="category_typess">
                                                 {% for x in category_ls %}
                                                     <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
                                                 {% endfor %}
@@ -271,7 +271,8 @@
                 return false
             }
             var formData = new FormData();
-            formData.append('category_type', $("#category_type").val());
+            alert($("#account_typess").val());
+            formData.append('category_type', $("#category_typess").val());
             formData.append('account_type', $("#account_typess").val());
             formData.append('platform_type', $("#platform_type").val());
             formData.append('account_name', $("#account_name").val());
@@ -334,7 +335,7 @@
                 return false
             }
             var formData = new FormData();
-            formData.append('category_type', $("#category_type").val());
+            formData.append('category_type', $("#category_types").val());
             formData.append('info_id_list', info_id_list);
             {#formData.append('id', {{data["id"]}});#}
             layer.confirm('是否批量设置分类？', {
