--- a/app/templates/account/account_manage_list.html
+++ b/app/templates/account/account_manage_list.html
@@ -86,6 +86,11 @@
                                                 <td>{{ row["create_time"] }}</td>
                                                 <td>
                                                     <button type="button"
+                                                            class="btn btn-success glyphicon glyphicon-trash"
+                                                            title="删除账户"
+                                                            onclick="delete_account({{ row['id'] }})"></button>
+                                                    <br>
+                                                    <button type="button"
                                                             class="btn btn-danger glyphicon glyphicon-pencil" title="编辑"
                                                             onclick="modify_monitor_data({{ row['id'] }})"></button>
                                                 </td>
@@ -167,6 +172,33 @@
         </div>
     </div>
     <script type="text/JavaScript">
+        // 删除资讯(单条)
+        function delete_account(id) {
+            layer.confirm("是否删除？", {
+                btn: ['确认', '取消']
+            }, function () {
+                $.ajax({
+                    url: '{{ url_for('new_flash.delete_account')}}',
+                    type: 'post',
+                    data: {
+                        id: id
+                    },
+                    success: function (data) {
+                        if (data.success == 'ok') {
+                            layer.msg("删除成功！", {time: 2000, icon: 1});
+                            window.location.reload()
+                        }
+                        else {
+                            layer.msg("删除失败！", {time: 2000, icon: 5});
+                            return false
+                        }
+                    }
+                });
+            }, function () {
+                layer.msg("已取消", {time: 2000, icon: 2});
+                return false
+            });
+        }
         {##initUpload("excelFile","excelC.zcUserC.excelInput.do");#}
 							function initUpload(ctrlName,uploadUrl){
 								var control = $("#"+ctrlName);
